Fix overly aggressive text wrapping

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,11 +32,13 @@ h2,
 h3,
 h4,
 p,
-li,
-button,
-a,
-span {
+li {
+  overflow-wrap: break-word;
+}
+
+.break-anywhere {
   overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 article {
